adding pkg update
Signed-off-by: Lalith Panditharatne <Lalith.Panditharatne@gmail.com>

--- a/arch/arm64/configs/rock3a_defconfig
+++ b/arch/arm64/configs/rock3a_defconfig
@@ -31,7 +31,8 @@ CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_INIT=""
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME="rock3a"
+CONFIG_UPGRADE_DTBFILE="rk3568-rock-3a.dtb"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
