--- a/arch/arm64/configs/rockpi4a_wifiAP_defconfig
+++ b/arch/arm64/configs/rockpi4a_wifiAP_defconfig
@@ -573,7 +573,7 @@ CONFIG_ARM_SCMI_CPUFREQ=y
 # end of CPU Frequency scaling
 # end of CPU Power Management
 
-CONFIG_IRQ_BYPASS_MANAGER=y
+CONFIG_IRQ_BYPASS_MANAGER=m
 CONFIG_HAVE_KVM=y
 # CONFIG_VIRTUALIZATION is not set
 CONFIG_ARM64_CRYPTO=y
@@ -1511,7 +1511,6 @@ CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_ARM_SCMI_HAVE_TRANSPORT=y
 CONFIG_ARM_SCMI_HAVE_SHMEM=y
 CONFIG_ARM_SCMI_TRANSPORT_MAILBOX=y
-CONFIG_ARM_SCMI_TRANSPORT_OPTEE=y
 CONFIG_ARM_SCMI_TRANSPORT_SMC=y
 # CONFIG_ARM_SCMI_TRANSPORT_SMC_ATOMIC_ENABLE is not set
 # CONFIG_ARM_SCMI_TRANSPORT_VIRTIO is not set
@@ -2451,7 +2450,6 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_OMAP4 is not set
 # CONFIG_KEYBOARD_TM2_TOUCHKEY is not set
 # CONFIG_KEYBOARD_XTKBD is not set
-CONFIG_KEYBOARD_CROS_EC=y
 # CONFIG_KEYBOARD_CAP11XX is not set
 # CONFIG_KEYBOARD_BCM is not set
 # CONFIG_KEYBOARD_MTK_PMIC is not set
@@ -2809,7 +2807,6 @@ CONFIG_I2C_RK3X=y
 #
 # Other I2C/SMBus bus drivers
 #
-CONFIG_I2C_CROS_EC_TUNNEL=y
 # CONFIG_I2C_VIRTIO is not set
 # end of I2C Hardware Bus support
 
@@ -3077,8 +3074,6 @@ CONFIG_CHARGER_BQ25980=m
 # CONFIG_BATTERY_GOLDFISH is not set
 # CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
-# CONFIG_CHARGER_CROS_USBPD is not set
-CONFIG_CHARGER_CROS_PCHG=y
 # CONFIG_CHARGER_UCS1002 is not set
 # CONFIG_CHARGER_BD99954 is not set
 # CONFIG_BATTERY_UG3105 is not set
@@ -3289,7 +3284,6 @@ CONFIG_MFD_CORE=y
 CONFIG_MFD_BD9571MWV=y
 CONFIG_MFD_AXP20X=y
 CONFIG_MFD_AXP20X_I2C=y
-CONFIG_MFD_CROS_EC_DEV=y
 # CONFIG_MFD_MADERA is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_DA9052_SPI is not set
@@ -3408,7 +3402,6 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_AXP20X=y
 CONFIG_REGULATOR_BD718XX=y
 CONFIG_REGULATOR_BD9571MWV=y
-# CONFIG_REGULATOR_CROS_EC is not set
 # CONFIG_REGULATOR_DA9121 is not set
 # CONFIG_REGULATOR_DA9210 is not set
 # CONFIG_REGULATOR_DA9211 is not set
@@ -3630,7 +3623,6 @@ CONFIG_HID_EZKEY=y
 # CONFIG_HID_GFRM is not set
 # CONFIG_HID_GLORIOUS is not set
 # CONFIG_HID_HOLTEK is not set
-# CONFIG_HID_GOOGLE_HAMMER is not set
 # CONFIG_HID_VIVALDI is not set
 # CONFIG_HID_GT683R is not set
 # CONFIG_HID_KEYTOUCH is not set
@@ -4203,7 +4195,7 @@ CONFIG_LEDS_TRIGGER_PANIC=y
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
 CONFIG_EDAC_SUPPORT=y
-CONFIG_EDAC=y
+CONFIG_EDAC=m
 CONFIG_EDAC_LEGACY_SYSFS=y
 # CONFIG_EDAC_DEBUG is not set
 # CONFIG_EDAC_THUNDERX is not set
@@ -4312,7 +4304,6 @@ CONFIG_RTC_DRV_PCF2127=m
 # CONFIG_RTC_DRV_V3020 is not set
 # CONFIG_RTC_DRV_OPTEE is not set
 # CONFIG_RTC_DRV_ZYNQMP is not set
-CONFIG_RTC_DRV_CROS_EC=m
 
 #
 # on-CPU RTC drivers
@@ -4334,29 +4325,29 @@ CONFIG_DMADEVICES=y
 #
 # DMA Devices
 #
-CONFIG_ASYNC_TX_ENABLE_CHANNEL_SWITCH=y
 CONFIG_DMA_ENGINE=y
-CONFIG_DMA_VIRTUAL_CHANNELS=y
+CONFIG_DMA_VIRTUAL_CHANNELS=m
 CONFIG_DMA_OF=y
 # CONFIG_ALTERA_MSGDMA is not set
 # CONFIG_AMBA_PL08X is not set
-# CONFIG_DW_AXI_DMAC is not set
-CONFIG_FSL_EDMA=y
+CONFIG_DW_AXI_DMAC=m
+CONFIG_FSL_EDMA=m
 # CONFIG_FSL_QDMA is not set
 # CONFIG_HISI_DMA is not set
 # CONFIG_INTEL_IDMA64 is not set
-CONFIG_MV_XOR_V2=y
-CONFIG_PL330_DMA=y
+# CONFIG_MV_XOR_V2 is not set
+CONFIG_PL330_DMA=m
 # CONFIG_PLX_DMA is not set
 # CONFIG_XILINX_DMA is not set
 # CONFIG_XILINX_ZYNQMP_DMA is not set
 # CONFIG_XILINX_ZYNQMP_DPDMA is not set
-CONFIG_QCOM_HIDMA_MGMT=y
-CONFIG_QCOM_HIDMA=y
-# CONFIG_DW_DMAC is not set
-# CONFIG_DW_DMAC_PCI is not set
-# CONFIG_DW_EDMA is not set
-# CONFIG_DW_EDMA_PCIE is not set
+CONFIG_QCOM_HIDMA_MGMT=m
+CONFIG_QCOM_HIDMA=m
+CONFIG_DW_DMAC_CORE=m
+CONFIG_DW_DMAC=m
+CONFIG_DW_DMAC_PCI=m
+CONFIG_DW_EDMA=m
+CONFIG_DW_EDMA_PCIE=m
 # CONFIG_SF_PDMA is not set
 
 #
@@ -4364,7 +4355,6 @@ CONFIG_QCOM_HIDMA=y
 #
 # CONFIG_ASYNC_TX_DMA is not set
 # CONFIG_DMATEST is not set
-CONFIG_DMA_ENGINE_RAID=y
 
 #
 # DMABUF options
@@ -4381,14 +4371,14 @@ CONFIG_SYNC_FILE=y
 
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
-CONFIG_VFIO=y
-CONFIG_VFIO_IOMMU_TYPE1=y
-CONFIG_VFIO_VIRQFD=y
+CONFIG_VFIO=m
+CONFIG_VFIO_IOMMU_TYPE1=m
+CONFIG_VFIO_VIRQFD=m
 # CONFIG_VFIO_NOIOMMU is not set
-CONFIG_VFIO_PCI_CORE=y
+CONFIG_VFIO_PCI_CORE=m
 CONFIG_VFIO_PCI_MMAP=y
 CONFIG_VFIO_PCI_INTX=y
-CONFIG_VFIO_PCI=y
+CONFIG_VFIO_PCI=m
 # CONFIG_VFIO_PLATFORM is not set
 # CONFIG_VFIO_MDEV is not set
 # CONFIG_VIRT_DRIVERS is not set
@@ -4404,103 +4394,11 @@ CONFIG_VIRTIO=y
 
 # CONFIG_GREYBUS is not set
 # CONFIG_COMEDI is not set
-CONFIG_STAGING=y
-# CONFIG_PRISM2_USB is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
-# CONFIG_RTL8723BS is not set
-# CONFIG_R8712U is not set
-# CONFIG_R8188EU is not set
-# CONFIG_RTS5208 is not set
-# CONFIG_VT6655 is not set
-# CONFIG_VT6656 is not set
-
-#
-# IIO staging drivers
-#
-
-#
-# Accelerometers
-#
-# CONFIG_ADIS16203 is not set
-# CONFIG_ADIS16240 is not set
-# end of Accelerometers
-
-#
-# Analog to digital converters
-#
-# CONFIG_AD7816 is not set
-# end of Analog to digital converters
-
-#
-# Analog digital bi-direction converters
-#
-# CONFIG_ADT7316 is not set
-# end of Analog digital bi-direction converters
-
-#
-# Capacitance to digital converters
-#
-# CONFIG_AD7746 is not set
-# end of Capacitance to digital converters
-
-#
-# Direct Digital Synthesis
-#
-# CONFIG_AD9832 is not set
-# CONFIG_AD9834 is not set
-# end of Direct Digital Synthesis
-
-#
-# Network Analyzer, Impedance Converters
-#
-# CONFIG_AD5933 is not set
-# end of Network Analyzer, Impedance Converters
-
-#
-# Active energy metering IC
-#
-# CONFIG_ADE7854 is not set
-# end of Active energy metering IC
-
-#
-# Resolver to digital converters
-#
-# CONFIG_AD2S1210 is not set
-# end of Resolver to digital converters
-# end of IIO staging drivers
-
-# CONFIG_FB_SM750 is not set
-CONFIG_STAGING_MEDIA=y
-# CONFIG_STAGING_BOARD is not set
-# CONFIG_LTE_GDM724X is not set
-# CONFIG_UNISYSSPAR is not set
-# CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
-# CONFIG_FB_TFT is not set
-# CONFIG_FUSB_30X is not set
-# CONFIG_KS7010 is not set
-# CONFIG_PI433 is not set
-# CONFIG_XIL_AXIS_FIFO is not set
-# CONFIG_FIELDBUS_DEV is not set
-# CONFIG_QLGE is not set
-# CONFIG_WFX is not set
+# CONFIG_STAGING is not set
 # CONFIG_GOLDFISH is not set
-CONFIG_CHROME_PLATFORMS=y
-CONFIG_CROS_EC=y
-CONFIG_CROS_EC_I2C=y
-# CONFIG_CROS_EC_RPMSG is not set
-CONFIG_CROS_EC_SPI=y
-CONFIG_CROS_EC_PROTO=y
-CONFIG_CROS_EC_CHARDEV=m
-CONFIG_CROS_EC_LIGHTBAR=y
-CONFIG_CROS_EC_VBC=y
-CONFIG_CROS_EC_DEBUGFS=y
-CONFIG_CROS_EC_SENSORHUB=y
-CONFIG_CROS_EC_SYSFS=y
-CONFIG_CROS_EC_TYPEC=m
-CONFIG_CROS_USBPD_NOTIFY=y
+# CONFIG_CHROME_PLATFORMS is not set
 # CONFIG_MELLANOX_PLATFORM is not set
-CONFIG_SURFACE_PLATFORMS=y
+# CONFIG_SURFACE_PLATFORMS is not set
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
@@ -4555,8 +4453,8 @@ CONFIG_ROCKCHIP_TIMER=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 CONFIG_ARM_ARCH_TIMER_OOL_WORKAROUND=y
-CONFIG_FSL_ERRATUM_A008585=y
-CONFIG_HISILICON_ERRATUM_161010101=y
+# CONFIG_FSL_ERRATUM_A008585 is not set
+# CONFIG_HISILICON_ERRATUM_161010101 is not set
 CONFIG_ARM64_ERRATUM_858921=y
 # CONFIG_MICROCHIP_PIT64B is not set
 # end of Clock Source drivers
@@ -4566,7 +4464,7 @@ CONFIG_ARM_MHU=y
 # CONFIG_ARM_MHU_V2 is not set
 CONFIG_PLATFORM_MHU=y
 # CONFIG_PL320_MBOX is not set
-# CONFIG_ROCKCHIP_MBOX is not set
+CONFIG_ROCKCHIP_MBOX=y
 # CONFIG_ALTERA_MBOX is not set
 # CONFIG_MAILBOX_TEST is not set
 CONFIG_IOMMU_IOVA=y
@@ -4583,7 +4481,7 @@ CONFIG_IOMMU_IO_PGTABLE_ARMV7S=y
 # CONFIG_IOMMU_IO_PGTABLE_ARMV7S_SELFTEST is not set
 # end of Generic IOMMU Pagetable Support
 
-# CONFIG_IOMMU_DEBUGFS is not set
+CONFIG_IOMMU_DEBUGFS=y
 CONFIG_IOMMU_DEFAULT_DMA_STRICT=y
 # CONFIG_IOMMU_DEFAULT_DMA_LAZY is not set
 # CONFIG_IOMMU_DEFAULT_PASSTHROUGH is not set
@@ -4595,7 +4493,7 @@ CONFIG_ARM_SMMU=y
 CONFIG_ARM_SMMU_DISABLE_BYPASS_BY_DEFAULT=y
 CONFIG_ARM_SMMU_V3=y
 # CONFIG_ARM_SMMU_V3_SVA is not set
-# CONFIG_VIRTIO_IOMMU is not set
+CONFIG_VIRTIO_IOMMU=m
 
 #
 # Remoteproc drivers
@@ -4607,20 +4505,16 @@ CONFIG_REMOTEPROC=y
 #
 # Rpmsg drivers
 #
-CONFIG_RPMSG=y
+CONFIG_RPMSG=m
 CONFIG_RPMSG_CHAR=m
-# CONFIG_RPMSG_CTRL is not set
-# CONFIG_RPMSG_NS is not set
-CONFIG_RPMSG_QCOM_GLINK=y
-CONFIG_RPMSG_QCOM_GLINK_RPM=y
-# CONFIG_RPMSG_VIRTIO is not set
+CONFIG_RPMSG_CTRL=m
+CONFIG_RPMSG_NS=m
+CONFIG_RPMSG_QCOM_GLINK=m
+CONFIG_RPMSG_QCOM_GLINK_RPM=m
+CONFIG_RPMSG_VIRTIO=m
 # end of Rpmsg drivers
 
-CONFIG_SOUNDWIRE=m
-
-#
-# SoundWire Devices
-#
+# CONFIG_SOUNDWIRE is not set
 
 #
 # SOC (System On Chip) specific Drivers
@@ -4634,14 +4528,14 @@ CONFIG_SOUNDWIRE=m
 #
 # Broadcom SoC drivers
 #
-CONFIG_SOC_BRCMSTB=y
+# CONFIG_SOC_BRCMSTB is not set
 # end of Broadcom SoC drivers
 
 #
 # NXP/Freescale QorIQ SoC drivers
 #
 # CONFIG_QUICC_ENGINE is not set
-CONFIG_FSL_RCPM=y
+# CONFIG_FSL_RCPM is not set
 # end of NXP/Freescale QorIQ SoC drivers
 
 #
@@ -4664,7 +4558,7 @@ CONFIG_QCOM_QMI_HELPERS=m
 CONFIG_ROCKCHIP_GRF=y
 CONFIG_ROCKCHIP_IODOMAIN=y
 CONFIG_ROCKCHIP_PM_DOMAINS=y
-CONFIG_SOC_TI=y
+# CONFIG_SOC_TI is not set
 
 #
 # Xilinx SoC drivers
@@ -4680,17 +4574,18 @@ CONFIG_PM_DEVFREQ=y
 # DEVFREQ Governors
 #
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
-# CONFIG_DEVFREQ_GOV_PERFORMANCE is not set
-# CONFIG_DEVFREQ_GOV_POWERSAVE is not set
+CONFIG_DEVFREQ_GOV_PERFORMANCE=m
+CONFIG_DEVFREQ_GOV_POWERSAVE=m
 CONFIG_DEVFREQ_GOV_USERSPACE=m
-# CONFIG_DEVFREQ_GOV_PASSIVE is not set
+CONFIG_DEVFREQ_GOV_PASSIVE=m
 
 #
 # DEVFREQ Drivers
 #
 # CONFIG_ARM_RK3328_DMC_DEVFREQ is not set
-# CONFIG_ARM_RK3399_DMC_DEVFREQ is not set
-# CONFIG_PM_DEVFREQ_EVENT is not set
+CONFIG_ARM_RK3399_DMC_DEVFREQ=m
+CONFIG_PM_DEVFREQ_EVENT=y
+CONFIG_DEVFREQ_EVENT_ROCKCHIP_DFI=m
 CONFIG_EXTCON=y
 
 #
@@ -4700,16 +4595,15 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_FSA9480 is not set
 # CONFIG_EXTCON_GPIO is not set
 # CONFIG_EXTCON_MAX3355 is not set
-CONFIG_EXTCON_PTN5150=m
+# CONFIG_EXTCON_PTN5150 is not set
 # CONFIG_EXTCON_RT8973A is not set
 # CONFIG_EXTCON_SM5502 is not set
-CONFIG_EXTCON_USB_GPIO=y
-CONFIG_EXTCON_USBC_CROS_EC=y
+CONFIG_EXTCON_USB_GPIO=m
 # CONFIG_EXTCON_USBC_TUSB320 is not set
 # CONFIG_EXTCON_USBC_VIRTUAL_PD is not set
 CONFIG_MEMORY=y
-# CONFIG_ARM_PL172_MPMC is not set
-CONFIG_IIO=y
+CONFIG_ARM_PL172_MPMC=m
+CONFIG_IIO=m
 CONFIG_IIO_BUFFER=y
 # CONFIG_IIO_BUFFER_CB is not set
 # CONFIG_IIO_BUFFER_DMA is not set
@@ -4751,7 +4645,6 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_DMARD10 is not set
 # CONFIG_FXLS8962AF_I2C is not set
 # CONFIG_FXLS8962AF_SPI is not set
-# CONFIG_IIO_CROS_EC_ACCEL_LEGACY is not set
 # CONFIG_IIO_ST_ACCEL_3AXIS is not set
 # CONFIG_KXSD9 is not set
 # CONFIG_KXCJK1013 is not set
@@ -4880,10 +4773,6 @@ CONFIG_TI_ADS1015=m
 # CONFIG_SENSEAIR_SUNRISE_CO2 is not set
 # CONFIG_VZ89X is not set
 # end of Chemical Sensors
-
-CONFIG_IIO_CROS_EC_SENSORS_CORE=m
-CONFIG_IIO_CROS_EC_SENSORS=m
-# CONFIG_IIO_CROS_EC_SENSORS_LID_ANGLE is not set
 
 #
 # Hid Sensor IIO Common
@@ -5064,7 +4953,6 @@ CONFIG_IIO_ST_LSM6DSX_SPI=m
 # CONFIG_CM3323 is not set
 # CONFIG_CM3605 is not set
 # CONFIG_CM36651 is not set
-CONFIG_IIO_CROS_EC_LIGHT_PROX=m
 # CONFIG_GP2AP002 is not set
 # CONFIG_GP2AP020A00F is not set
 CONFIG_SENSORS_ISL29018=m
@@ -5169,7 +5057,6 @@ CONFIG_IIO_ST_MAGN_SPI_3AXIS=m
 #
 # CONFIG_ABP060MG is not set
 # CONFIG_BMP280 is not set
-CONFIG_IIO_CROS_EC_BARO=m
 # CONFIG_DLHL60D is not set
 # CONFIG_DPS310 is not set
 # CONFIG_HP03 is not set
@@ -5194,7 +5081,6 @@ CONFIG_MPL3115=m
 #
 # Proximity and distance sensors
 #
-# CONFIG_CROS_EC_MKBP_PROXIMITY is not set
 # CONFIG_ISL29501 is not set
 # CONFIG_LIDAR_LITE_V2 is not set
 # CONFIG_MB1232 is not set
@@ -5239,7 +5125,6 @@ CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_DEBUG is not set
 # CONFIG_PWM_ATMEL_TCB is not set
-CONFIG_PWM_CROS_EC=m
 # CONFIG_PWM_DWC is not set
 # CONFIG_PWM_FSL_FTM is not set
 # CONFIG_PWM_PCA9685 is not set
@@ -5290,22 +5175,22 @@ CONFIG_PHY_CADENCE_SIERRA=m
 # CONFIG_PHY_CPCAP_USB is not set
 # CONFIG_PHY_MAPPHONE_MDM6600 is not set
 # CONFIG_PHY_OCELOT_SERDES is not set
-CONFIG_PHY_QCOM_USB_HS=y
+# CONFIG_PHY_QCOM_USB_HS is not set
 # CONFIG_PHY_QCOM_USB_HSIC is not set
-# CONFIG_PHY_ROCKCHIP_DP is not set
-# CONFIG_PHY_ROCKCHIP_DPHY_RX0 is not set
+CONFIG_PHY_ROCKCHIP_DP=m
+CONFIG_PHY_ROCKCHIP_DPHY_RX0=m
 CONFIG_PHY_ROCKCHIP_EMMC=y
 CONFIG_PHY_ROCKCHIP_INNO_HDMI=m
-CONFIG_PHY_ROCKCHIP_INNO_USB2=y
-# CONFIG_PHY_ROCKCHIP_INNO_CSIDPHY is not set
+CONFIG_PHY_ROCKCHIP_INNO_USB2=m
+CONFIG_PHY_ROCKCHIP_INNO_CSIDPHY=m
 CONFIG_PHY_ROCKCHIP_INNO_DSIDPHY=m
-# CONFIG_PHY_ROCKCHIP_NANENG_COMBO_PHY is not set
-# CONFIG_PHY_ROCKCHIP_INNO_USB3 is not set
+CONFIG_PHY_ROCKCHIP_NANENG_COMBO_PHY=m
+CONFIG_PHY_ROCKCHIP_INNO_USB3=m
 CONFIG_PHY_ROCKCHIP_PCIE=m
-# CONFIG_PHY_ROCKCHIP_SNPS_PCIE3 is not set
-CONFIG_PHY_ROCKCHIP_TYPEC=y
-# CONFIG_PHY_ROCKCHIP_USB is not set
-CONFIG_PHY_SAMSUNG_USB2=y
+CONFIG_PHY_ROCKCHIP_SNPS_PCIE3=m
+CONFIG_PHY_ROCKCHIP_TYPEC=m
+CONFIG_PHY_ROCKCHIP_USB=m
+# CONFIG_PHY_SAMSUNG_USB2 is not set
 # CONFIG_PHY_TUSB1210 is not set
 # end of PHY Subsystem
 
@@ -5350,12 +5235,12 @@ CONFIG_NVMEM_RMEM=m
 
 # CONFIG_FPGA is not set
 # CONFIG_FSI is not set
-CONFIG_TEE=y
+CONFIG_TEE=m
 
 #
 # TEE drivers
 #
-CONFIG_OPTEE=y
+CONFIG_OPTEE=m
 # end of TEE drivers
 
 CONFIG_MULTIPLEXER=y
@@ -5373,7 +5258,7 @@ CONFIG_PM_OPP=y
 # CONFIG_SIOX is not set
 CONFIG_SLIMBUS=m
 CONFIG_SLIM_QCOM_CTRL=m
-CONFIG_INTERCONNECT=y
+# CONFIG_INTERCONNECT is not set
 # CONFIG_COUNTER is not set
 # CONFIG_MOST is not set
 # CONFIG_PECI is not set
@@ -5932,6 +5817,7 @@ CONFIG_DECOMPRESS_LZO=y
 CONFIG_DECOMPRESS_LZ4=y
 CONFIG_DECOMPRESS_ZSTD=y
 CONFIG_GENERIC_ALLOCATOR=y
+CONFIG_INTERVAL_TREE=y
 CONFIG_XARRAY_MULTI=y
 CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
