remove iommu debg
Signed-off-by: Lalith Panditharatne <Lalith.Panditharatne@gmail.com>

--- a/arch/arm64/configs/rockpi4a_wifiAP_defconfig
+++ b/arch/arm64/configs/rockpi4a_wifiAP_defconfig
@@ -4481,7 +4481,7 @@ CONFIG_IOMMU_IO_PGTABLE_ARMV7S=y
 # CONFIG_IOMMU_IO_PGTABLE_ARMV7S_SELFTEST is not set
 # end of Generic IOMMU Pagetable Support
 
-CONFIG_IOMMU_DEBUGFS=y
+# CONFIG_IOMMU_DEBUGFS is not set
 CONFIG_IOMMU_DEFAULT_DMA_STRICT=y
 # CONFIG_IOMMU_DEFAULT_DMA_LAZY is not set
 # CONFIG_IOMMU_DEFAULT_PASSTHROUGH is not set
